# lxplug-updater

./: Makefile.am  README  configure.ac  hy.po  meson.build
data/: 10-lxpanel-installer.rules  Makefile.am  lxplug-updater.ui  meson.build
debian/: changelog  control  copyright  install  lxplug-updater.install  wfplug-updater.install
plugins/: Makefile.am
plugins/updater/: updater.c
po/: POTFILES.in  en_GB.po  it.po  ko.po  sk.po  zh_CN.po
src/: Makefile.am  installer.c  meson.build  updater.c  updater.cpp  updater.h  updater.hpp
